# rec-aic2025

./: .gitignore  =  itemcf.py  main.py  pyproject.toml
config/: __init__.py  base_config.py  data.toml  model.toml  test.toml  train.toml
dataprocess/: dataset.py  sample.py
layer/: __init__.py  attention.py  emb_fusion.py  ffn.py  gater.py  moe_component.py  moe_ffn.py
model/: __init__.py  itemcf.py  sasrec.py
model/tokenizer/: rqkmeans.py  rqvae.py
module/: __init__.py  former.py  log_decoder.py  losses.py  net.py
src/: __init__.py  exp.py  infer.py  trainer.py
utils/: __init__.py  types.py
