[project]
name = "rec-aic2025"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "tensorboard>=2.20.0",
    "toml>=0.10.2",
    "torch>=2.9.0",
    "tqdm>=4.67.1",
]
